# indie

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.travis/linux-clang-5.0/: dl_deps.sh
.travis/linux-gcc-7/: dl_deps.sh  tests.sh
.travis/linux-gcc-8/: tests.sh
bomberman/: CMakeLists.txt
bomberman/include/bomberman/: Game.hpp  Window.hpp
bomberman/src/: Game.cpp  Main.cpp  Window.cpp
cmake/: AddTest.cmake  OS.cmake  OutputDirectory.cmake
ecs/: CMakeLists.txt
ecs/include/indie/ecs/: Entity.hpp  EntityManager.hpp  Pool.hpp  System.hpp
ecs/include/indie/ecs/details/: SparseSet.hpp
ecs/tests/: CMakeLists.txt  EntityManager.cpp  Pool.cpp  SparseSet.cpp  System.cpp
event/: CMakeLists.txt
event/include/indie/event/: EventManager.hpp  Observer.hpp
event/tests/: EventManager.cpp
log/: CMakeLists.txt
log/include/indie/log/: Logger.hpp
log/include/indie/log/details/: OS.hpp  StringFormat.hpp
meta/: CMakeLists.txt
meta/include/indie/meta/: Tuple.hpp  TypeList.hpp
meta/tests/: CMakeLists.txt  Tuple.cpp  TypeList.cpp
server/: CMakeLists.txt
server/include/indie/server/: Packets.hpp
server/src/: Main.cpp
